# 2DActionGame

./: .gitignore  CMakeLists.txt  README.md
include/: Boss.h  ColorPalette.h  Enemy.h  Game.h  Goal.h  Item.h  Particle.h
src/: Boss.cpp  ColorPalette.cpp  Enemy.cpp  Game.cpp  Goal.cpp  Item.cpp  Particle.cpp  main.cpp
